Why and when to use Webiny section and few other links

--- a/docs/developer-docs/5.39.x/get-started/welcome.mdx
+++ b/docs/developer-docs/5.39.x/get-started/welcome.mdx
@@ -15,7 +15,7 @@ import { Section, SectionTitle, SectionRow, SectionBox } from "@/components/land
 import { ReactComponent as WhyWebinyIcon } from "./assets/feature-icons/why-webiny.svg";
 import { ReactComponent as SecurityIcon } from "./assets/feature-icons/security.svg";
 import { ReactComponent as InfrastructureIcon } from "./assets/feature-icons/infrastructure.svg";
-import { ReactComponent as FeaturesIcon } from "./assets/feature-icons/features.svg";
+import { ReactComponent as MultiTenancyIcon } from "./assets/feature-icons/multi-tenancy.svg";
 import { ReactComponent as FrameworkIcon } from "./assets/feature-icons/framework.svg";
 import { ReactComponent as SelfHostingIcon } from "./assets/feature-icons/selfhosting.svg";
 
@@ -44,33 +44,33 @@ import { ReactComponent as CommunityIcon } from "./assets/resources-icons/commun
 <FeatureList
   items={[
     {
-      label: "Why use Webiny?",
-      link: "/docs/why-webiny",
+      label: "Why & when to use Webiny?",
+      link: "/docs/overview/why-and-when-to-use-webiny",
       icon: WhyWebinyIcon
     },
     {
-      label: "Security",
+      label: "Security overview",
       link: "/docs/overview/features/security",
       icon: SecurityIcon
     },
     {
-      label: "Infrastructure",
-      link: "/docs/why-webiny",
+      label: "Serverless infrastructure",
+      link: "/docs/overview/features/serverless-infrastructure",
       icon: InfrastructureIcon
     },
     {
-      label: "Features overview",
-      link: "/docs/why-webiny",
-      icon: FeaturesIcon
+      label: "Multi-tenancy",
+      link: "/docs/overview/features/multi-tenancy",
+      icon: MultiTenancyIcon
     },
     {
       label: "Development framework",
-      link: "/docs/why-webiny",
+      link: "/docs/overview/features/framework",
       icon: FrameworkIcon
     },
     {
       label: "Self-hosting",
-      link: "/docs/why-webiny",
+      link: "/docs/overview/features/self-hosted",
       icon: SelfHostingIcon
     }
   ]}
@@ -85,7 +85,7 @@ import { ReactComponent as CommunityIcon } from "./assets/resources-icons/commun
     categoryTitle="Products"
   />
   <SectionRow>
-    <SectionBox title="Headless CMS" Icon={HeadlessCmsIcon} learnMoreLink="/headless">
+    <SectionBox title="Headless CMS" Icon={HeadlessCmsIcon} learnMoreLink="/docs/headless-cms/overview">
       <p>
         Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
       </p>
@@ -93,7 +93,7 @@ import { ReactComponent as CommunityIcon } from "./assets/resources-icons/commun
         Learn how to create plugins and customize the Headless CMS experience to your content needs.
       </p>
     </SectionBox>
-    <SectionBox title="Page Builder" Icon={PageBuilderIcon} learnMoreLink="/headless">
+    <SectionBox title="Page Builder" Icon={PageBuilderIcon} learnMoreLink="/docs/page-builder/overview">
       <p>
         Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
       </p>
@@ -103,7 +103,7 @@ import { ReactComponent as CommunityIcon } from "./assets/resources-icons/commun
     </SectionBox>
   </SectionRow>
   <SectionRow>
-    <SectionBox title="File Manager" Icon={FileManagerIcon} learnMoreLink="/headless">
+    <SectionBox title="File Manager" Icon={FileManagerIcon} learnMoreLink="/docs/file-manager/extending/create-a-file-type-plugin">
       <p>
         Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
       </p>
@@ -111,7 +111,7 @@ import { ReactComponent as CommunityIcon } from "./assets/resources-icons/commun
         Learn how to create plugins and customize the Headless CMS experience to your content needs.
       </p>
     </SectionBox>
-    <SectionBox title="Form Builder" Icon={FormBuilderIcon} learnMoreLink="/headless">
+    <SectionBox title="Form Builder" Icon={FormBuilderIcon} learnMoreLink="/docs/form-builder/theming/introduction">
       <p>
         Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
       </p>
@@ -119,9 +119,9 @@ import { ReactComponent as CommunityIcon } from "./assets/resources-icons/commun
         Learn how to create plugins and customize the Headless CMS experience to your content needs.
       </p>
     </SectionBox>
-    <SectionBox title="Advanced Publishing Workflow" Icon={ApwIcon} learnMoreLink="/headless">
+    <SectionBox title="Admin Area" Icon={ApwIcon} learnMoreLink="/docs/admin-area/basics/framework">
       <p>
-        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
+        Learn how to customize, white-label and build new apps inside the Webiny Admin area.
       </p>
       <p>
         Learn how to create plugins and customize the Headless CMS experience to your content needs.
@@ -139,54 +139,39 @@ import { ReactComponent as CommunityIcon } from "./assets/resources-icons/commun
     categoryTitle="Development"
   />
   <SectionRow>
-    <SectionBox title="Video training course" Icon={VideoIcon} learnMoreLink="/headless-12">
+    <SectionBox title="Video training course" Icon={VideoIcon} learnMoreLink="https://www.youtube.com/playlist?list=PL9HlKSQaEuXTGvfbFiBg0u_gOhphvof2r">
       <p>
-        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
-      </p>
-      <p>
-        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+        For developers just getting started with Webiny, we've prepared a short onboarding video course to help you take your first step in development with Webiny.
       </p>
     </SectionBox>
-    <SectionBox title="Core concepts" Icon={ConceptsIcon} learnMoreLink="/headless">
+    <SectionBox title="Core development concepts" Icon={ConceptsIcon} learnMoreLink="/docs/core-development-concepts/basics/tools-and-libraries">
       <p>
-        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
+        Once you're past the basics of how to develop with Webiny, this category of articles is a good next step. 
       </p>
       <p>
-        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+        You'll learn about the core concepts such as the watch command, project organization, the CLI utility and more.
       </p>
     </SectionBox>
-    <SectionBox title="Customize and extend" Icon={CustomizeIcon} learnMoreLink="/headless">
+    <SectionBox title="Customize and extend" Icon={CustomizeIcon} learnMoreLink="/docs/core-development-concepts/extending-and-customizing/extend-graphql-api">
       <p>
-        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
-      </p>
-      <p>
-        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+        Learn how to extend the GraphQL API, CLI utility, add custom routes to the Lambda function, intercept requests or customize the built-in Lexical editor.
       </p>
     </SectionBox>
   </SectionRow>
   <SectionRow>
-    <SectionBox title="CI/CD setup" Icon={CiCdIcon} learnMoreLink="/headless">
+    <SectionBox title="CI/CD setup" Icon={CiCdIcon} learnMoreLink="/docs/core-development-concepts/ci-cd/introduction">
       <p>
-        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
-      </p>
-      <p>
-        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+        If you need to configure and deploy Webiny from a CI/CD environment, follow this guide.
       </p>
     </SectionBox>
-    <SectionBox title="Security Framework" Icon={SecurityFrameworkIcon} learnMoreLink="/headless">
+    <SectionBox title="Security Framework" Icon={SecurityFrameworkIcon} learnMoreLink="/docs/core-development-concepts/security-framework/introduction">
       <p>
-        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
-      </p>
-      <p>
-        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+        Webiny has a simple, but powerful security framework that allows you to integrate with different SSO systems as well as customize the authentication and authorization flows. 
       </p>
     </SectionBox>
-    <SectionBox title="Background tasks" Icon={BgTasksIcon} learnMoreLink="/headless">
+    <SectionBox title="Background tasks" Icon={BgTasksIcon} learnMoreLink="/docs/core-development-concepts/background-tasks/about-background-tasks">
       <p>
-        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
-      </p>
-      <p>
-        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+        Webiny supports long-running tasks that are executed in the background. In this set of articles, you'll learn how to leverage this mechanism inside your own custom plugins and apps built inside Webiny. 
       </p>
     </SectionBox>
   </SectionRow>
@@ -201,38 +186,26 @@ import { ReactComponent as CommunityIcon } from "./assets/resources-icons/commun
     categoryTitle="Resources"
   />
   <SectionRow>
-    <SectionBox title="User guides" Icon={UserGuidesIcon} learnMoreLink="/headless-12">
+    <SectionBox title="User guides" Icon={UserGuidesIcon} learnMoreLink="/docs/user-guides/overview">
       <p>
-        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
-      </p>
-      <p>
-        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+        Guides to help non-technical users master Webiny and many of its features.
       </p>
     </SectionBox>
-    <SectionBox title="Release notes" Icon={ReleaseNotesIcon} learnMoreLink="/headless">
+    <SectionBox title="Release notes" Icon={ReleaseNotesIcon} learnMoreLink="/docs/release-notes/upgrade-webiny">
       <p>
-        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
-      </p>
-      <p>
-        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+        Check out the latest updates and how to upgrade Webiny to the latest version.
       </p>
     </SectionBox>
   </SectionRow>
   <SectionRow>
-    <SectionBox title="Company handbook" Icon={CompanyHandbookIcon} learnMoreLink="/headless">
+    <SectionBox title="Company handbook" Icon={CompanyHandbookIcon} learnMoreLink="/docs/handbook/company/why-webiny-exists">
       <p>
-        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
-      </p>
-      <p>
-        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+        We are a company made of brilliant individuals. If you want to learn more about what drives us and we think about the purpose of Webiny, check out our company handbook.
       </p>
     </SectionBox>
-    <SectionBox title="Community" Icon={CommunityIcon} learnMoreLink="/headless">
+    <SectionBox title="Community" Icon={CommunityIcon} learnMoreLink="/slack">
       <p>
-        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
-      </p>
-      <p>
-        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+        We're proud to be an open-source project and our community is a great place to connect with other like-minded individuals that are using Webiny.
       </p>
     </SectionBox>
   </SectionRow>
