Writing style improvement

--- a/docs/developer-docs/5.39.x/overview/why-and-when-to-use-webiny.mdx
+++ b/docs/developer-docs/5.39.x/overview/why-and-when-to-use-webiny.mdx
@@ -15,11 +15,11 @@ import { Alert } from "@/components/Alert";
 
 ## Why Webiny
 
-Several key elements make Webiny different from the other solutions on the market. Let's explore some of the key differentiators before we go into the use-cases that Webiny is best suited for. 
+Several key elements make Webiny different from the other solutions on the market. Let's explore some of the key differentiators before we go into the use cases that Webiny is best suited for. 
 
 ### It's a content platform
 
-Webiny is not your typical CMS. We prefer to describe Webiny as a content platform. What's the difference? A platform is a foundation that's designed to be built upon and integrated with other systems. Webiny's foundation provides all the capabilities you might need to manage your content, but its underlying development framework enables you to fully customize the content creation and management experience. 
+Webiny is not your typical CMS. We prefer to describe Webiny as a content platform. What's the difference? A platform is a foundation that's designed to be built upon and integrated with other systems. Webiny's foundation provides all the capabilities you might need to manage your content, and its underlying development framework enables you to fully customize the content creation and management experience. 
 
 A traditional solution requires you to adapt to its way of working and allows you only to build experiences that the system was designed to support. Webiny is the opposite of that. Webiny adapts to you, and you control what experiences you want to create. 
 
