--- a/docs/developer-docs/5.39.x/overview/why-and-when-to-use-webiny.mdx
+++ b/docs/developer-docs/5.39.x/overview/why-and-when-to-use-webiny.mdx
@@ -75,7 +75,7 @@ The multi-tenancy feature at the core of Webiny is ideal for using Webiny as a f
 
 ### Marketing pages with rich and interactive components
 
-Both the Page Builder and the Headless CMS application can be used to create marketing pages. Developers can create custom components that are both interactive and dynamic which then non-technical content editors can easily use to create their content and enrich the experience for the end user. Another added benefit is that those components can expose configuration parameters. For example, it's easy to create a product listing component that a user drags&drops into the Page Builder editor, and then picks how many products to list and from which categories. The products can come external 3rd party system, or directly from Webiny's Headless CMS. This is just one of many options.
+Both the Page Builder and the Headless CMS application can be used to create marketing pages. Developers can create custom components that are both interactive and dynamic which then non-technical content editors can easily use to create their content and enrich the experience for the end user. Another added benefit is that those components can expose configuration parameters. For example, it's easy to create a product listing component that a user drags&drops into the Page Builder editor, and then picks how many products to list and from which categories. The products can come from an external 3rd party system, or directly from Webiny's Headless CMS. This is just one of many options.
 
 ### Applications with integrations to 3rd party systems
 
