Fixed the welcome page copy

--- a/docs/developer-docs/5.39.x/get-started/welcome.mdx
+++ b/docs/developer-docs/5.39.x/get-started/welcome.mdx
@@ -24,6 +24,7 @@ import { ReactComponent as PageBuilderIcon } from "./assets/product-icons/page-b
 import { ReactComponent as FileManagerIcon } from "./assets/product-icons/file-manager.svg";
 import { ReactComponent as FormBuilderIcon } from "./assets/product-icons/form-builder.svg";
 import { ReactComponent as ApwIcon } from "./assets/product-icons/apw.svg";
+import { ReactComponent as AdminIcon } from "./assets/product-icons/admin.svg";
 
 import { ReactComponent as VideoIcon } from "./assets/development-icons/video.svg";
 import { ReactComponent as ConceptsIcon } from "./assets/development-icons/core-concepts.svg";
@@ -87,44 +88,29 @@ import { ReactComponent as CommunityIcon } from "./assets/resources-icons/commun
   <SectionRow>
     <SectionBox title="Headless CMS" Icon={HeadlessCmsIcon} learnMoreLink="/docs/headless-cms/overview">
       <p>
-        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
-      </p>
-      <p>
-        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+        Learn how to create plugins and customize the Headless CMS experience to your content needs. From extending the built-in GraphQL capabilities to modifying the editorial experience. 
       </p>
     </SectionBox>
     <SectionBox title="Page Builder" Icon={PageBuilderIcon} learnMoreLink="/docs/page-builder/overview">
       <p>
-        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
-      </p>
-      <p>
-        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+        Learn how to introduce custom dynamic and interactive elements to the Page Builder editor, how to theme the layouts to your brand and how to modify the editor UI to better match the needs of your content creators.
       </p>
     </SectionBox>
   </SectionRow>
   <SectionRow>
     <SectionBox title="File Manager" Icon={FileManagerIcon} learnMoreLink="/docs/file-manager/extending/create-a-file-type-plugin">
       <p>
-        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
-      </p>
-      <p>
-        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+        Webiny's File Manager is a scalable DAM solution - in this section, you'll learn how you can add additional meta information to your file entries, introduce support for new file types, or even replace the File Manager with a custom DAM. 
       </p>
     </SectionBox>
     <SectionBox title="Form Builder" Icon={FormBuilderIcon} learnMoreLink="/docs/form-builder/theming/introduction">
       <p>
-        Webiny's Headless CMS is one of the most customizable, and scalable options on the market.
-      </p>
-      <p>
-        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+        In this section, you'll learn how to customize the layout and visual aspects of your forms.
       </p>
     </SectionBox>
-    <SectionBox title="Admin Area" Icon={ApwIcon} learnMoreLink="/docs/admin-area/basics/framework">
+    <SectionBox title="Admin Area" Icon={AdminIcon} learnMoreLink="/docs/admin-area/basics/framework">
       <p>
-        Learn how to customize, white-label and build new apps inside the Webiny Admin area.
-      </p>
-      <p>
-        Learn how to create plugins and customize the Headless CMS experience to your content needs.
+        The Admin Area is an app inside which all other apps live. You can white-label the UI to match the brand of your customer, introduce new apps into the menu, modify the start page, and more. 
       </p>
     </SectionBox>
   </SectionRow>
