--- a/docs/release-notes/5.40.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.40.0/upgrade-guide.mdx
@@ -42,13 +42,21 @@ yarn webiny upgrade
 
 ### 3. Breaking Changes❗
 
-#### 3.1 Removed Deprecated APIs
+This release contains a couple of breaking changes that might affect your project, if you've extended your project via plugins. If you're using the default installation of Webiny without customizations, you can skip this section.
 
-As mentioned in the [changelog](/docs/release-notes/5.40.0/changelog#removed-deprecated-ap-is-4051), with this release, we've removed a couple of backend JavaScript APIs that were marked as deprecated in previous releases.
+#### 3.1 Removed Deprecated Backend APIs
+
+As mentioned in the [changelog](/docs/release-notes/5.40.0/changelog#removed-deprecated-ap-is-4051), with this release, we've removed a couple of backend JavaScript APIs that were marked as deprecated in previous releases. 
 
 Essentially, we've removed a couple of older methods used for subscribing to lifecycle events and also for performing Headless CMS-related security permissions checks.
 
-Before deploying, please refer to the separate [Deprecated APIs](/docs/release-notes/5.40.0/deprecated-apis) article, and make sure to update your project code, if need be.
+Before deploying, please refer to the separate [Removed APIs](/docs/release-notes/5.40.0/removed-apis) article, and make sure to update your project code, if necessary.
+
+#### 3.2 Removed/Replaced Frontend APIs
+
+We've also upgraded some of the Admin app components and plugins, namely `Form`, `AppPbWebsiteSettings`, and `FileManagerFileTypePlugin`. 
+
+Before deploying, please refer to their respective sections in the [Removed APIs](/docs/release-notes/5.40.0/removed-apis) article, and make sure to update your project code, if necessary.
 
 ### 4. Deploy Your Project
 
