--- a/docs/release-notes/5.40.0/removed-apis.mdx
+++ b/docs/release-notes/5.40.0/removed-apis.mdx
@@ -49,13 +49,13 @@ new CmsGraphQLSchemaPlugin<Context>({
 });
 ```
 
-In the example above, the `context.cms.permissions.entries.ensure` method is used to check if the current user has the required permissions to read entries. 
+In the example above, the `context.cms.permissions.entries.ensure` method is used to check if the current user has the required permissions to read entries.
 
 With this release, the `context.cms.permissions` object has been removed. Instead, you should use the `context.cms.accessControl` object to perform the same checks.
 
 <Alert type="info">
 
-  With this [5.39.2](/docs/release-notes/5.39.2/changelog#new-authorization-related-utilities-3865) release, we’ve introduced a new property on the CMS context object, called `accessControl`. Essentially, this property is a reference to the [AccessControl](https://github.com/webiny/webiny-js/blob/dev/packages/api-headless-cms/src/crud/AccessControl/AccessControl.ts) class instance, which is used to perform authorization checks on content model groups, models, and entries.
+With this [5.39.2](/docs/release-notes/5.39.2/changelog#new-authorization-related-utilities-3865) release, we’ve introduced a new property on the CMS context object, called `accessControl`. Essentially, this property is a reference to the [AccessControl](https://github.com/webiny/webiny-js/blob/dev/packages/api-headless-cms/src/crud/AccessControl/AccessControl.ts) class instance, which is used to perform authorization checks on content model groups, models, and entries.
 
 </Alert>
 
@@ -106,7 +106,7 @@ Multiple legacy methods used for subscribing to Page Builder application's lifec
 
 <Alert type="info">
 
-  Learn more about lifecycle events in the [Lifecycle Events](/docs/page-builder/references/lifecycle-events) article.
+Learn more about lifecycle events in the [Lifecycle Events](/docs/page-builder/references/lifecycle-events) article.
 
 </Alert>
 
@@ -163,21 +163,76 @@ Multiple legacy methods used for subscribing to Page Builder application's lifec
 | `onBeforeInstall` | Triggered before Page Builder is installed | `onSystemBeforeInstall` |
 | `onAfterInstall`  | Triggered after Page Builder is installed  | `onSystemAfterInstall`  |
 
+### `AppPbWebsiteSettings` Replaced with `WebsiteSettingsConfig`
+
+`AddPbWebsiteSettings` component to add website settings was replaced by `WebsiteSettingsConfig`. This was done to enable more features, and more control over the website settings view.
+
+Until this release, you would use `AddPbWebsiteSettings` like this:
+
+```tsx
+import React from "react";
+import gql from "graphql-tag";
+import { AddPbWebsiteSettings } from "@webiny/app-serverless-cms";
+
+const { Group, Element } = AddPbWebsiteSettings;
+
+export const SocialNetworks = () => {
+  const socialNetworks = gql`
+    {
+      network1
+    }
+  `;
+
+  return (
+    <Group name={"socialNetworks"} label={"Social Networks"} querySelection={socialNetworks}>
+      <Element>{/* Your UI goes here */}</Element>
+    </Group>
+  );
+};
+```
+
+If we were to rewrite the previous example using `WebsiteSettingsConfig`, it would look like this:
+
+```diff-tsx
+import React from "react";
+import gql from "graphql-tag";
++ import { WebsiteSettingsConfig } from "@webiny/app-page-builder";
+
++ const { Group, Element } = WebsiteSettingsConfig;
+
+export const SocialNetworks = () => {
+  const socialNetworks = gql`
+    {
+      network1
+    }
+  `;
+
+  return (
++   <WebsiteSettingsConfig>
+      <Group name={"socialNetworks"} label={"Social Networks"} querySelection={socialNetworks}>
++       <Element name={"myElement"}>{/* Your UI goes here */}</Element>
+      </Group>
++   </WebsiteSettingsConfig>
+   );
+};
+```
+
+Notice how, besides the code itself, the import changed; the `WebsiteSettingsConfig` is now imported from `@webiny/app-page-builder`.
+
 ## I18N
 
 Multiple legacy methods used for subscribing to I18N application's lifecycle events have been removed.
 
 ### Locales
 
-| Deprecated API           | Description                            | Replacement API          |
-| ------------------------ | -------------------------------------- | ------------------------ |
+| Deprecated API         | Description                          | Replacement API        |
+| ---------------------- | ------------------------------------ | ---------------------- |
 | `onBeforeLocaleCreate` | Triggered before a locale is created | `onLocaleBeforeCreate` |
 | `onAfterLocaleCreate`  | Triggered after a locale is created  | `onLocaleAfterCreate`  |
 | `onBeforeLocaleUpdate` | Triggered before a locale is updated | `onLocaleBeforeUpdate` |
 | `onAfterLocaleUpdate`  | Triggered after a locale is updated  | `onLocaleAfterUpdate`  |
 | `onBeforeLocaleDelete` | Triggered before a locale is deleted | `onLocaleBeforeDelete` |
 | `onAfterLocaleDelete`  | Triggered after a locale is deleted  | `onLocaleAfterDelete`  |
-
 
 ### Installation
 
@@ -196,3 +251,60 @@ With this release, instead of using the `FileManagerFileTypePlugin` class, devel
 
 - [Custom File Preview](/docs/file-manager/extending/customize-file-preview)
 - [Custom File Actions](/docs/file-manager/extending/customize-file-actions)
+
+## Forms
+
+### Removed the `form` Object from `Bind` component and `useBind` Hook
+
+A reference to `form` was removed from the `<Bind>` component render prop, and `useBind` hook. You should now use the `useForm` hook to get a reference to the parent Form object. This was done to optimize re-rendering, and also make a clear separation between the form itself, and bindings to the UI.
+
+Until this release, you could get a reference to the `form` instance from Bind's render prop, like this:
+
+```tsx Pre 5.40.
+import { Form, Bind } from "@webiny/form";
+
+const MyView = () => {
+  return (
+    <Form>
+      {() => (
+        <Bind name="value" defaultValue={""}>
+          {({ value, onChange, form }) => (
+            /* Notice the `form` object in the render prop params. */
+            <span>Your UI that does something with the `form`.</span>
+          )}
+        </Bind>
+      )}
+    </Form>
+  );
+};
+```
+
+From 5.40.0 on, you will have to write this differently. More often than not, you're adding new inputs to existing forms via plugins, so you're just mounting `<Bind>` elements, or use the `useBind` hook. To get access to the form object, you'll need to use the `useForm` hook, like this:
+
+```tsx Post 5.40.
+import { Form, Bind } from "@webiny/form";
+
+const MyButton = () => {
+  // You can now access the form via a hook.
+  const form = useForm();
+
+  const handleClick = () => {
+    // Let's imagine you want to set some other field's value.
+    form.setValue("someOtherField", 123);
+  };
+
+  return (
+    <Bind name="value">
+      {({ value, onChange }) => (
+        // Notice the `form` object passed to the render prop function.
+        <button onClick={handleClick}>Button</button>
+      )}
+    </Bind>
+  );
+};
+
+// Let's imagine your component is mounted within some form in the Admin app.
+const MyView = () => {
+  return <Form>{() => <MyButton />}</Form>;
+};
+```
