docs: removed broken link for plugin doc; will add it again once the new doc is available

--- a/docs/developer-docs/5.35.x/headless-cms/extending/custom-field-type.mdx
+++ b/docs/developer-docs/5.35.x/headless-cms/extending/custom-field-type.mdx
@@ -25,7 +25,7 @@ Webiny Headless CMS comes with a predefined set of content model fields. But, yo
 
 ## Plugins
 
-Plugins are a vital part of Webiny, and the majority of Webiny's functionality lives in plugins. You can learn more about plugins [here](/docs/{version}/core-development-concepts/basics/plugins).
+Plugins are a vital part of Webiny, and the majority of Webiny's functionality lives in plugins.
 
 We will create our custom field with the help of plugins. Plugins will construct every part of the custom field i.e. we will create a plugin to list our new field in the fields list, another plugin to render the field, another one to store and retrieve data.
 
