docs: upgrade lambda runtime version to nodejs18

--- a/docs/developer-docs/5.39.x/infrastructure/basics/modify-cloud-infrastructure.mdx
+++ b/docs/developer-docs/5.39.x/infrastructure/basics/modify-cloud-infrastructure.mdx
@@ -509,7 +509,7 @@ export default createApiApp({
     });
 
     const simpleCronJobFunction = new aws.lambda.Function("my-cron-job-fn", {
-      runtime: "nodejs14.x",
+      runtime: aws.lambda.Runtime.NodeJS18dX,
       handler: "handler.handler",
       description: "A simple Lambda function that logs time (executed in my cron job).",
       role: role.arn,
